--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,18 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .ad-container-left, .ad-container-right {
+    @apply fixed top-0 w-40 h-screen hidden lg:flex items-center justify-center bg-gray-100 dark:bg-gray-800;
+  }
+  .ad-container-left {
+    @apply left-0;
+  }
+  .ad-container-right {
+    @apply right-0;
+  }
+  .ad-container-footer {
+     @apply w-full h-24 flex items-center justify-center bg-gray-100 dark:bg-gray-800 rounded-lg text-center;
+  }
+}
