--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,7 @@
 
 @layer components {
   .ad-container-left, .ad-container-right {
-    @apply fixed top-0 w-40 h-screen hidden lg:flex items-center justify-center bg-gray-100 dark:bg-gray-800;
+    @apply fixed top-0 w-40 h-screen hidden lg:flex items-center justify-center;
   }
   .ad-container-left {
     @apply left-0;
